# QSDK-Demo

./: README.md  md5.txt
demo/: CMakeLists.txt  env-qca4531.txt  main.c
toolchain-mips_34kc_gcc-4.8-linaro_uClibc-1.0.14/: info.mk
toolchain-mips_34kc_gcc-4.8-linaro_uClibc-1.0.14/include/: COPIED
toolchain-mips_34kc_gcc-4.8-linaro_uClibc-1.0.14/include/asm/: ..install.cmd
toolchain-mips_34kc_gcc-4.8-linaro_uClibc-1.0.14/include/asm-generic/: ..install.cmd
toolchain-mips_34kc_gcc-4.8-linaro_uClibc-1.0.14/include/bits/: uClibc_config.h
toolchain-mips_34kc_gcc-4.8-linaro_uClibc-1.0.14/include/drm/: ..install.cmd
toolchain-mips_34kc_gcc-4.8-linaro_uClibc-1.0.14/include/linux/: ..install.cmd
toolchain-mips_34kc_gcc-4.8-linaro_uClibc-1.0.14/include/misc/: ..install.cmd
toolchain-mips_34kc_gcc-4.8-linaro_uClibc-1.0.14/include/mtd/: ..install.cmd
toolchain-mips_34kc_gcc-4.8-linaro_uClibc-1.0.14/include/rdma/: ..install.cmd
toolchain-mips_34kc_gcc-4.8-linaro_uClibc-1.0.14/include/scsi/: ..install.cmd
toolchain-mips_34kc_gcc-4.8-linaro_uClibc-1.0.14/include/sound/: ..install.cmd
toolchain-mips_34kc_gcc-4.8-linaro_uClibc-1.0.14/include/uapi/: ..install.cmd
toolchain-mips_34kc_gcc-4.8-linaro_uClibc-1.0.14/include/video/: ..install.cmd
toolchain-mips_34kc_gcc-4.8-linaro_uClibc-1.0.14/include/xen/: ..install.cmd
toolchain-mips_34kc_gcc-4.8-linaro_uClibc-1.0.14/lib/: libatomic.la  libatomic.so.1.0.0  libgcc_s.so.1  libstdc++.la  libstdc++.so.6.0.19  libstdc++.so.6.0.19-gdb.py  libsupc++.la
toolchain-mips_34kc_gcc-4.8-linaro_uClibc-1.0.14/sbin/: ldconfig
(+164 files in other folders)
